28-25b-2 just modify some app source file

--- a/apilib/Makefile
+++ b/apilib/Makefile
@@ -1,7 +1,8 @@
 OBJS_API =	api001.obj api002.obj api003.obj api004.obj api005.obj api006.obj \
 			api007.obj api008.obj api009.obj api010.obj api011.obj api012.obj \
 			api013.obj api014.obj api015.obj api016.obj api017.obj api018.obj \
-			api019.obj api020.obj
+			api019.obj api020.obj \
+			alloca.obj
 
 TOOLPATH = ../../z_tools/
 INCPATH  = ../../z_tools/haribote/
@@ -17,7 +18,7 @@ BIM2HRB  = $(TOOLPATH)bim2hrb.exe
 RULEFILE = ../haribote.rul
 EDIMG    = $(TOOLPATH)edimg.exe
 IMGTOL   = $(TOOLPATH)imgtol.com
-GOLIB    = $(TOOLPATH)golib00.exe 
+GOLIB    = $(TOOLPATH)golib00.exe
 COPY     = copy
 DEL      = del
 
